把riscv子模块的仓库url从ssh改成https

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "riscv"]
 	path = riscv
-	url = git@github.com:duskmoon314/riscv.git
+	url = https://github.com/duskmoon314/riscv.git
 	branch = extN
