--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2018"
 
 [dependencies]
 log = "0.4"
-riscv = { path = "./riscv", features = ["inline-asm"] }
+riscv = { git = "https://github.com/duskmoon314/riscv.git", branch = "extN", features = ["inline-asm"] }
