--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ embedded-hal = "=1.0.0-alpha.4"
 nb = "1.0.0"
 spin = "0.9"
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
+blake3 = { version = "1.2.0", default-features = false }
 
 [features]
 board_lrv = ["uart_xilinx"]
